--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -177,7 +177,6 @@ nav ul {
 }
 
 nav li {
-  /* padding: 0px 40px 0px 0px; */
   padding: 0 10px;
   font-size: 1.2em;
   text-decoration: none;
@@ -240,10 +239,10 @@ input[type="submit"] {
 }
 
 footer {
-  position: absolute; /* pour que le footer reste en bas de la page \*/
+  position: absolute;
+  bottom: 0; /* pour que le footer reste en bas */
   left: 0; /* pour que le footer reste à gauche */
   right: 0; /* pour que le footer reste à droite */
-  bottom: 0; /* pour que le footer reste en bas */
   width: 100%;
   background-color: white;
 }
@@ -251,5 +250,5 @@ footer {
 footer nav ul {
   display: flex;
   justify-content: flex-end;
-  margin: 2em 9em;
+  padding: 20px 80px;
 }
